adding todo project

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,8 +3,10 @@ pipeline {
     stages {
         stage('Setup') {
             steps {
-                sh "mkdir newdir"
-                sh "newdir"
+                sh """
+                    mkdir newdir
+                    sh newdir
+                """
                 //
             }
         }
