fixing jenkins file

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,8 @@ pipeline {
     agent any
     environment {
         CREATE_SCHEMA = "true"
-        RUN_APP = "false"        
+        RUN_APP = "false"    
+        DATABASE_URI = credentials("DATABASE_URI")    
     }
     stages {
         stage('Setup') {
